--- a/INICIO/Inicio.html
+++ b/INICIO/Inicio.html
@@ -50,7 +50,7 @@
                     <div class="txt">
                       <p>
                         "¡Protege nuestro futuro! La energía hidroeléctrica es renovable y limpia. 
-                         Aprovechemos este recurso natural de manera responsable y eficiente. 
+                         Aprovechemos este recurso natural de manera responsable y eficiente. hola
                          ¡Un pequeño cambio en tus hábitos puede hacer una gran diferencia!"
                       </p>
                     </div><!--fin txt-->
