--- a/INICIO/Inicio.html
+++ b/INICIO/Inicio.html
@@ -19,15 +19,15 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary contenedor" >
         <div class="container-fluid contenedor" >
-          <img src="../Recursos/Navegador/Logo.jpg" alt="">
+          <img src="/recursos/navegador/logo.png" alt="">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="Inicio.html">Inicio</a>
-              <a class="nav-link" href="../Dashboard/Dashboard.html">Dashboard</a>
-              <a class="nav-link" href="../Calculadora/Calculadora.html">Calculadora</a>
+              <a class="nav-link" href="/dashboard/dashboard.html">Dashboard</a>
+              <a class="nav-link" href="/calculadora/calculadora.html">Calculadora</a>
             </div>
           </div>
         </div>
@@ -45,7 +45,6 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="car itm1">
-
                   <div class="desenfoque">
                     <div class="txt">
                       <p>
@@ -63,9 +62,9 @@
                 <div class="car itm2">
                   <div class="desenfoque">
                     <div class="txt">
-                      <p>"¡Un futuro más verde es posible! Adopta energías renovables como solar,
-                        eólica e hidroeléctrica. Cada acción cuenta: reduce, reutiliza, recicla. 
-                        ¡Protege el planeta para las generaciones futuras!"
+                      <p>"La energía solar transforma la luz del sol en poder para nuestro futuro: 
+                        una fuente limpia, inagotable, y sostenible.
+                        cada vez más accesible para todas las comunidades."
                       </p>
                     </div><!--fin txt-->
                   </div><!--fin desenfoque-->
@@ -76,10 +75,9 @@
                 <div class="car itm3">
                   <div class="desenfoque">
                     <div class="txt">
-                      <p>"¡Cada acción cuenta! Reduce tus emisiones de CO2:</p>
-                      <p>Camina, anda en bici o usa transporte público Apaga luces y electrodomésticos cuando no los uses
-                        Elige productos con embalajes sostenibles</p>
-                      <p>¡Juntos podemos combatir el cambio climático y proteger nuestro planeta!"</p>
+                      <p>"Aprovechar la energía solar no solo reduce costos, también protege el planeta para las próximas generaciones, 
+                        promoviendo un estilo de vida responsable, eficiente y respetuoso con el medio ambiente.”</p>
+                      <p>"¡Juntos podemos combatir el cambio climático y proteger nuestro planeta!"</p>
                     </div><!--fin txt-->
                   </div><!--fin desenfoque-->
                 </div>
