--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary contenedor" >
         <div class="container-fluid contenedor" >
-          <img src="../Recursos/navegador/logo.png" alt="">
+          <img src="/recursos/LOGO/logo.png" alt="">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,7 +27,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="../Inicio/Inicio.html">Inicio</a>
               <a class="nav-link" href="../Dashboard/Dashboard.html">Dashboard</a>
-              <a class="nav-link" href="#">Calculadora</a>
+              <a class="nav-link" href="/CALCULADORA/calculadora.html">Calculadora</a>
             </div>
           </div>
         </div>
@@ -36,7 +36,7 @@
     </div>
     <main id="contenido">
 
-      <img src="../Recursos/imagenesCalculadora/mini-split-y-energia-solar-1-min.png" alt="" class="bordes">
+      <img src="/recursos/imagenesCalculadora/mini-split-y-energia-solar-1-min.png" alt="" class="bordes">
 
         
         <form action="" id="formulario">
@@ -56,9 +56,9 @@
 
         </form>
 
-      <img src="../Recursos/imagenesCalculadora/mini-split-y-energia-solar-1-min.png" alt="" class="bordes invertido">
+      <img src="/recursos/imagenesCalculadora/mini-split-y-energia-solar-1-min.png" alt="" class="bordes invertido">
 
-      <img src="../Recursos/Imagenes_calculadora/mural_plantas.jpg" alt="" id="inferior">
+      <img src="/recursos/imagenesCalculadora/mural_plantas.jpg" alt="" id="inferior">
     </main>
 
     <!--Implementacion de libreria Sweetalert-->
