--- a/INICIO/Inicio.html
+++ b/INICIO/Inicio.html
@@ -126,10 +126,10 @@
                   <div class="formato-t texto2">
                         <h1>¿Como Funciona?</h1>
                         <ul>
-                          <li>Represas: Se construye una represa en un río o un embalse que almacena grandes cantidades de agua.</li>
-                          <li>Turbinas: El agua almacenada se libera, y al fluir hacia abajo, pasa por turbinas, las cuales giran debido a la fuerza del agua.</li>
-                          <li>Generación de electricidad: El movimiento de las turbinas activa generadores que transforman la energía mecánica en electricidad.</li>
-                          <li>Distribución: La electricidad generada se envía a través de líneas de transmisión a las áreas que la necesitan.</li>
+                          <li>Paneles Solares: Se instalan paneles que capturan la luz del sol mediante células fotovoltaicas capaces de convertirla en energía.</li>
+                          <li>Conversión de Energía: La luz solar recogida se transforma en electricidad de corriente continua (CC) dentro de los paneles.</li>
+                          <li>La corriente continua pasa por un inversor que la convierte en corriente alterna (CA), que es la que usamos en casas, empresas y dispositivos.</li> 
+                          <li>Distribución: La electricidad generada se envía al sistema eléctrico del lugar o a la red general para abastecer las áreas que la necesitan.</li>
                         </ul>
                   </div><!--fin de formato texto2 -->
         </div>
